--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
     "lucide-react": "^0.503.0",
     "next": "^15.3.1",
+    "psgc": "^2.2.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "tailwindcss-animate": "^1.0.7"
